force-app/main/default/objects/NCMT_TI_TRCS_Cost_Detail__c/NCMT_TI_TRCS_Cost_Detail__c.object-meta.xml
<CustomObject>
    <customHelpPage>NCMT_HelpPage</customHelpPage>
    <label>TI-TRCS Cost Detail</label>
    <nameField>
        <displayFormat>TITRCS-{0000}</displayFormat>
        <label>TI-TRCS Cost Detail Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TI-TRCS Cost Detail</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>