force-app/main/default/objects/NCMT_TI_TRCS_Cost_Detail__c/fields/Cost_Category__c.field-meta.xml
<CustomField>
    <fullName>Cost_Category__c</fullName>
    <formula>TI_TRCS_Cost_Parameter__r.Cost_Category__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost Category</label>
    <type>Text</type>
</CustomField>