force-app/main/default/objects/NCMT_TI_TRCS_Cost_Detail__c/fields/NCMT_Housing_Plan__c.field-meta.xml
<CustomField>
    <fullName>NCMT_Housing_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NCMT Housing Plan</label>
    <referenceTo>NCMT_Housing_Plan__c</referenceTo>
    <relationshipLabel>TI-TRCS Cost Detail</relationshipLabel>
    <relationshipName>TI_TRCS_Cost_Detail</relationshipName>
    <type>Lookup</type>
</CustomField>