force-app/main/default/objects/NCMT_TI_TRCS_Cost_Detail__c/fields/NCMT_Project__c.field-meta.xml
<CustomField>
    <fullName>NCMT_Project__c</fullName>
    <formula>HYPERLINK(&quot;/&quot;&amp;Project_Cost_Summary__r.Project_Name__r.Id,Project_Cost_Summary__r.Project_Name__r.Name, &quot;_parent&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NCMT Project</label>
    <type>Text</type>
</CustomField>