force-app/main/default/objects/NCMT_TI_TRCS_Cost_Detail__c/fields/Project_Cost_Summary__c.field-meta.xml
<CustomField>
    <fullName>Project_Cost_Summary__c</fullName>
    <label>Project Cost Summary</label>
    <referenceTo>NCMT_Project_Cost_Summary__c</referenceTo>
    <relationshipLabel>TI-TRCS Cost Detail</relationshipLabel>
    <relationshipName>TI_TRCS_Cost_Detail</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>