force-app/main/default/objects/NCMT_TI_TRCS_Cost_Detail__c/fields/RA_Refresh_Unit_Cost__c.field-meta.xml
<CustomField>
    <fullName>RA_Refresh_Unit_Cost__c</fullName>
    <defaultValue>0</defaultValue>
    <label>RA Refresh Unit Cost</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>