force-app/main/default/objects/NCMT_TI_TRCS_Cost_Detail__c/fields/RA_Renovate_Total_Units__c.field-meta.xml
<CustomField>
    <fullName>RA_Renovate_Total_Units__c</fullName>
    <defaultValue>0</defaultValue>
    <label>RA Renovate Total Units</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>