force-app/main/default/objects/NCMT_TI_TRCS_Cost_Detail__c/fields/TI_Cost_Adjusted__c.field-meta.xml
<CustomField>
    <fullName>TI_Cost_Adjusted__c</fullName>
    <formula>IF(( Cost_Category__c  = &apos;F20&apos;),0.00, TI_Total_Cost__c *  Project_Cost_Summary__r.Project_Name__r.TI_Adjustment_Factor__c  
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TI Cost Adjusted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>