force-app/main/default/objects/NCMT_TI_TRCS_Cost_Detail__c/fields/TI_Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>TI_Total_Cost__c</fullName>
    <formula>(TI_Total_Units__c *  TI_Unit_Cost__c) +(RA_Refresh_Unit_Cost__c * RA_Refresh_Total_Units__c) + ( RA_Renovate_Unit_Cost__c * RA_Renovate_Total_Units__c ) + ( RA_New_Fit_Out_Unit_Cost__c* RA_New_Fit_Out_Total_Units__c ) + (RA_Core_Shell_Unit_Cost__c * RA_New_Fit_Out_Total_Units__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TI Total Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>