force-app/main/default/objects/NCMT_TI_TRCS_Cost_Detail__c/fields/TI_Total_Units__c.field-meta.xml
<CustomField>
    <fullName>TI_Total_Units__c</fullName>
    <label>TI Total Units</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>