force-app/main/default/objects/NCMT_TI_TRCS_Cost_Detail__c/fields/TI_TRCS_Cost_Criterion__c.field-meta.xml
<CustomField>
    <fullName>TI_TRCS_Cost_Criterion__c</fullName>
    <formula>TI_TRCS_Cost_Parameter__r.Cost_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TI-TRCS Cost Criterion</label>
    <type>Text</type>
</CustomField>