force-app/main/default/objects/NCMT_TI_TRCS_Cost_Detail__c/fields/TI_TRCS_Cost_Parameter__c.field-meta.xml
<CustomField>
    <fullName>TI_TRCS_Cost_Parameter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TI-TRCS Cost Parameter</label>
    <referenceTo>TI_TRCS_Cost_Parameter__c</referenceTo>
    <relationshipLabel>TI-TRCS Cost Detail</relationshipLabel>
    <relationshipName>TI_TRCS_Cost_Detail</relationshipName>
    <type>Lookup</type>
</CustomField>