force-app/main/default/objects/NCMT_TI_TRCS_Cost_Detail__c/fields/TI_TRCS_Space_Type__c.field-meta.xml
<CustomField>
    <fullName>TI_TRCS_Space_Type__c</fullName>
    <formula>TEXT(TI_TRCS_Cost_Parameter__r.Space_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TI-TRCS Space Type</label>
    <type>Text</type>
</CustomField>