force-app/main/default/objects/NCMT_TI_TRCS_Cost_Detail__c/fields/Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost__c</fullName>
    <formula>(TRCS_Total_Cost__c +  TI_Total_Cost__c) *  Project_Cost_Summary__r.Project_Name__r.TI_Adjustment_Factor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>