force-app/main/default/objects/NCMT_TI_TRCS_Cost_Detail__c/fields/TRCS_Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>TRCS_Total_Cost__c</fullName>
    <formula>TRCS_Unit_Cost__c  *  TRCS_Total_Units__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TRCS Total Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>