force-app/main/default/objects/NCMT_TI_TRCS_Cost_Detail__c/fields/TRCS_Total_Cost_Adjusted__c.field-meta.xml
<CustomField>
    <fullName>TRCS_Total_Cost_Adjusted__c</fullName>
    <formula>TRCS_Total_Cost__c * Project_Cost_Summary__r.Project_Name__r.Core_Shell_Adjustment_Factor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TRCS Total Cost Adjusted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>