force-app/main/default/objects/NCMT_TI_TRCS_Cost_Detail__c/fields/TRCS_Unit_Cost__c.field-meta.xml
<CustomField>
    <fullName>TRCS_Unit_Cost__c</fullName>
    <defaultValue>0</defaultValue>
    <label>TRCS Unit Cost</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>